# tabmail-native-fts

./: .dev.vars.example  .gitignore  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  Cargo.toml  README.md  THIRD_PARTY_LICENSES.md  TRADEMARKS.md
.cargo/: config.toml
scripts/: rotate-update-signing-key.sh
src/: config.rs  install_paths.rs  logging.rs  main.rs  native_messaging.rs  protocol.rs  self_update.rs  update_signature.rs
src/embeddings/: download.rs  engine.rs  mod.rs  text_prep.rs
src/fts/: db.rs  hybrid.rs  memory_db.rs  mod.rs  query.rs  synonyms.rs
tests/: __init__.py  run_tests.py  test_multithreaded.py  test_rust_process_parity.py  test_rust_update_request.py
